<?xml version="1.0"?>
<package format="2">
  <name>basic_package</name>
  <version>0.0.3</version>
  <description>An example of a basic package</description>

  <maintainer email="asier.fernandez@tecnalia.com">Asier Fernandez</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
